@@ -1,3 +1,11 @@
+2011-01-16 05:01-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* GGnomeTheme.m
+	* NSMenuView+Gnome.m: Change drawing to avoid issue with 
+	lines being drawn after selection.  The solution is something
+	of a hack.  This indicates that there might need to be methods
+	altering the frame in the theme later on.
+
 2011-01-16 03:20-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* GnomeThemeInfo.plist: Added setting to use in-window menus.
